# short-term-trading

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  render.yaml  requirements.txt
api/: main.py
backtest/: correlation.py  costs.py  engine.py  metrics.py  monte_carlo.py  parameter_sensitivity.py  walk_forward.py
config/strategies/: connors_rsi2.yaml  turtle_system2.yaml
core/data/: cache.py  macro.py  market_data.py
core/indicators/: __init__.py  technical.py
core/regime/: __init__.py  detector.py
core/risk/: manager.py  position_sizing.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/backtest/: page.tsx
dashboard/src/app/chart/: page.tsx
dashboard/src/app/history/: page.tsx
dashboard/src/app/momentum/: page.tsx
dashboard/src/app/screener/: page.tsx
dashboard/src/app/signals/: page.tsx
dashboard/src/components/: CandlestickChart.tsx
dashboard/src/lib/: api.ts  types.ts
execution/: alpaca_broker.py  orchestrator.py  scheduler.py
notifications/: slack.py
research/: strategy_notes.md  system_design.md
screener/: trend_template.py
strategies/: base.py  connors_rsi2.py  momentum.py  turtle_system2.py
